FTB-Community/force-app/main/default/objects/FTB_Trade__c/FTB_Trade__c.object-meta.xml
<CustomObject>
    <label>Trade</label>
    <nameField>
        <displayFormat>FTBTRD-{0000000}</displayFormat>
        <label>Trades Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>