FTB-Community/force-app/main/default/objects/FTB_Trade__c/fields/FTB_OfferedBy__c.field-meta.xml
<CustomField>
    <fullName>FTB_OfferedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offered By</label>
    <referenceTo>FTB_Team__c</referenceTo>
    <relationshipLabel>Trades - Offered By</relationshipLabel>
    <relationshipName>FTB_OfferedBys</relationshipName>
    <type>Lookup</type>
</CustomField>