FTB-Community/force-app/main/default/objects/FTB_Trade__c/fields/FTB_OfferedTo__c.field-meta.xml
<CustomField>
    <fullName>FTB_OfferedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offered To</label>
    <referenceTo>FTB_Team__c</referenceTo>
    <relationshipLabel>Trades - Offered To</relationshipLabel>
    <relationshipName>FTB_OfferedTos</relationshipName>
    <type>Lookup</type>
</CustomField>