FTB-Community/force-app/main/default/objects/FTB_Trade__c/fields/FTB_PlayersOffered__c.field-meta.xml
<CustomField>
    <fullName>FTB_PlayersOffered__c</fullName>
    <label>Players Offered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>