FTB-Community/force-app/main/default/objects/FTB_Trade__c/fields/FTB_PlayersRequested__c.field-meta.xml
<CustomField>
    <fullName>FTB_PlayersRequested__c</fullName>
    <label>Players Requested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>