FTB-Community/force-app/main/default/objects/FTB_Trade__c/fields/FTB_Status__c.field-meta.xml
<CustomField>
    <fullName>FTB_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>