FTB-Community/force-app/main/default/objects/FTB_Trade__c/listViews/FTB_LV_Trades.listView-meta.xml
<ListView>
    <fullName>FTB_LV_Trades</fullName>
    <columns>NAME</columns>
    <columns>FTB_OfferedBy__c</columns>
    <columns>FTB_OfferedTo__c</columns>
    <columns>FTB_PlayersOffered__c</columns>
    <columns>FTB_PlayersRequested__c</columns>
    <columns>FTB_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Trades</label>
</ListView>